Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: albert-hello-node
  labels:
    app: albert-hello-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: albert-hello-node
  template:
    metadata:
      labels:
        app: albert-hello-node
    spec:
      containers:
        - name: node
          image: public.ecr.aws/u2q1a2y8/soon-node-docker-ecr-20240422:latest
          ports:
            - containerPort: 8080
