Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: albert-hello-node
spec:
  ingressClassName: nginx
  rules:
    - host: albert-argocd-gitops.sctp-sandbox.com
      http:
        paths:
          - backend:
              service:
                name: albert-hello-node
                port:
                  number: 80
            path: /
            pathType: Prefix
